Fix character icon not showing when player is marked dead

--- a/frontend-web/src/components/Player/PlayerIcon.module.scss
+++ b/frontend-web/src/components/Player/PlayerIcon.module.scss
@@ -26,7 +26,7 @@
   box-shadow: 0 0 1rem rgb(255, 255, 255);
   cursor: pointer;
 
-  &::after {
+  & > .characterUnderlay {
     content: "";
     position: absolute;
     top: 0;
@@ -34,11 +34,11 @@
     width: 100%;
     height: 100%;
     background-image: var(--character-image-url);
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
-    opacity: 0.3;
+    opacity: 0.5;
     z-index: -1;
   }
 
